--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         Inventario</a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Consultar</a></li>
-                            <li><a class="dropdown-item" href="#">Ingresar</a></li>
-                            <li><a class="dropdown-item" href="#">Actualizar</a></li>
+                            <li><a class="dropdown-item" href="pConsultar.html">Consultar</a></li>
+                            <li><a class="dropdown-item" href="pIngresar.html">Ingresar</a></li>
+                            <li><a class="dropdown-item" href="pActualizar.html">Actualizar</a></li>
                             <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="#">Eliminar</a></li>
+                            <li><a class="dropdown-item" href="pEliminar.html">Eliminar</a></li>
                             <!-- <li><a class="dropdown-item" href="#">Something else here</a></li> -->
                         </ul>
                     </li>
