--- a/pIngresar.html
+++ b/pIngresar.html
@@ -41,13 +41,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="calculadora.html">Calculadora</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Conversor</a>
+                        <a class="nav-link" href="conversor.html">Conversor</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -73,47 +73,34 @@
         </div>
     </nav>
     <!-- cuerpo de la página -->
-    <div class="container-sm col-md-9" style="background-color: #e9ecef;"> <!-- style="background-color: aquamarine;" -->
-        <form name="forCon" method="POST">
-            <div class="row pt-3 px-3 pb-1">
-                <div class="mb-2 col-xl p-0 me-xl-1" style="background-color: rgb(255, 255, 255); border-radius: 5px;">
-                    <div class="col-xl-4 col-3 ms-1 my-1">
-                        <select name="tipDat1" class="form-select" style="border: none; border-radius: 2px 0px 0px 0px;">
-                            <option value="1073741824">Bytes</option>
-                            <option value="1048576">Kilobytes</option>
-                            <option value="1024">Megabytes</option>
-                            <option value="1">Gigabytes</option>
-                            <option value="0.0009765625">Terabytes</option>
-                        </select>
-                    </div>
-                    <div class="col-12 px-1 pb-1 float-end">
-                        <input type="text" class="form-control form-control-lg text-end" id="conNum" name="conNum" placeholder="Ingrese número 1" style="border: none; border-radius: 0px 0px 2px 2px;">
-                    </div>
+    <div class="container-lg col-lg-8" style="background-color: #e9ecef;">
+        <div class="row pt-3 pb-1">
+            <div class="col">
+                <div class="input-group mb-2">
+                    <span class="input-group-text col-sm-3">Codigo Producto</span>
+                    <input type="text" aria-label="First name" class="form-control">
                 </div>
-                <div class="mb-2 col-xl p-0 ms-xl-1" style="background-color: rgb(255, 255, 255); border-radius: 5px;">
-                    <div class="col-xl-4 col-3 ms-1 my-1">
-                        <select name="tipDat2" class="form-select" style="border: none; border-radius: 2px 0px 0px 0px;">
-                            <option value="1073741824">Bytes</option>
-                            <option value="1048576">Kilobytes</option>
-                            <option value="1024">Megabytes</option>
-                            <option value="1">Gigabytes</option>
-                            <option value="0.0009765625">Terabytes</option>
-                        </select>
-                    </div>
-                    <div class="col-12 px-1 pb-1 float-end">
-                        <input type="text" class="form-control form-control-lg text-end" id="conRes" name="conRes" placeholder="Ingrese número 2" style="border: none; border-radius: 0px 0px 2px 2px;" disabled>
-                    </div>
+                <div class="input-group mb-2">
+                    <span class="input-group-text col-sm-3">Nombre Producto</span>
+                    <input type="text" aria-label="First name" class="form-control">
+                </div>
+                <div class="input-group mb-2">
+                    <span class="input-group-text col-sm-3">Clase Producto</span>
+                    <input type="text" aria-label="First name" class="form-control">
+                </div>
+                <div class="input-group mb-2">
+                    <span class="input-group-text col-sm-3">Cantidad Unidades</span>
+                    <input type="text" aria-label="First name" class="form-control">
+                </div>
+                <div class="input-group mb-2">
+                    <span class="input-group-text col-sm-3">Precio Producto</span>
+                    <input type="text" aria-label="First name" class="form-control">
+                </div>
+                <div class="d-grid col-6 mx-auto mt-3 mb-2">
+                    <button type="button" class="btn btn-primary">Ingresar</button>
                 </div>
             </div>
-            <!-- <hr class="dropdown-divider"> -->
-            <div class="row justify-content-md-center">
-                <div class="col">
-                    <div class="mb-3 d-grid col-6 mx-auto">
-                        <input type="button" class="btn btn-primary" name="" value="Calcular" onclick="calConversor()">
-                    </div>
-                </div>
-            </div>
-        </form>
+        </div>
     </div>
     <!-- footer -->
     <div class="container fixed-bottom">
