--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
         </div>
     </nav>
     <!-- cuerpo de la página -->
-    <div class="container-sm" style="background-color: aquamarine;">
-        <section>
-            <p>sección</p>
-        </section>
+    <div class="container-sm text-center py-5 bg-secondary p-2 text-dark bg-opacity-25 shadow p-3 mb-5" style="margin-top: 6rem;">
+        <div class="my-5">
+            <h1 class="fw-bold">PC Electronics</h1>
+        </div>
     </div>
     <!-- footer -->
     <div class="container fixed-bottom">
