--- a/calculadora.html
+++ b/calculadora.html
@@ -73,57 +73,76 @@
         </div>
     </nav>
     <!-- cuerpo de la página -->
-    <div class="container-sm col-md-9" style="background-color: #e9ecef;"> <!-- style="background-color: aquamarine;" -->
+    <div class="container-sm col-md-7" style="background-color: #e9ecef;"> <!-- style="background-color: aquamarine;" -->
         <form name="forCal" method="POST">
-            <div class="row justify-content-md-center pt-3">
-                <div class="col-xl-4">
-                    <div class="mb-2">
-                        <!-- <label for="exampleInputEmail1" class="form-label">Número 1</label> -->
-                        <input type="text" class="form-control form-control-lg" id="calNum1" name="calNum1" placeholder="Ingrese número 1">
+            <div class="row">
+                <div class="row ms-0 gy-2 align-items-center justify-content-center">
+                    <div class="col-lg-2">
+                        <label for="vaCom" class="col-form-label">Valor Compra</label>
                     </div>
-                </div>
-                <div class="col-xl-4 mb-2 px-3 ps-xl-1 pe-xl-2"> <!-- style="background-color: burlywood;" -->
-                    <div class="row row-cols-6 row-cols-lg-6 g-2 g-lg-3 ">
-                        <div class="col text-center fs-4 d-grid p-1">
-                            <input type="Button" name="" value="+" onclick="sum()" class="btn btn-outline-success">
-                        </div>
-                        <div class="col text-center fs-4 d-grid p-1">
-                            <input type="Button" name="" value="-" onclick="res()" class="btn btn-outline-success">
-                        </div>
-                        <div class="col text-center fs-4 d-grid p-1">
-                            <input type="Button" name="" value="✱" onclick="mul()" class="btn btn-outline-success">
-                        </div>
-                        <div class="col text-center fs-4 d-grid p-1">
-                            <input type="Button" name="" value="/" onclick="div()" class="btn btn-outline-success">
-                        </div>
-                        <div class="col text-center fs-4 d-grid p-1">
-                            <input type="Button" name="" value="%" onclick="por()" class="btn btn-outline-success">
-                        </div>
-                        <div class="col text-center fs-4 d-grid p-1">
-                            <input type="Button" name="" value="AC" onclick="reset()" class="btn btn-primary">
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-4">
-                    <div class="mb-2">
-                        <!-- <label for="exampleInputEmail1" class="form-label">Número 2</label> -->
-                        <input type="text" class="form-control form-control-lg" id="calNum2" name="calNum2" placeholder="Ingrese número 2">
+                    <div class="col-lg-9">
+                        <input type="tex" id="vaCom" name="vaCom" class="form-control" placeholder="Digite el Valor">
                     </div>
                 </div>
             </div>
-            <hr class="h-divider">
-            <div class="row justify-content-md-center">
-                <div class="col">
-                    <div class="mb-3">
-                        <!-- <label for="exampleInputEmail1" class="form-label">Resultado</label> -->
-                        <input type="text" class="form-control form-control-lg" id="calRes" name="calRes" placeholder="Resultado">
+            <div class="row">
+                <div class="row ms-0 gy-2 align-items-center justify-content-center">
+                    <div class="col-lg-2">
+                        <label for="vaUti" class="col-form-label">Utilidad %</label>
+                    </div>
+                    <div class="col-lg-9">
+                        <input type="tex" id="vaUti" name="vaUti" class="form-control" placeholder="Digite % Utilidad">
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="row ms-0 gy-2 align-items-center justify-content-center">
+                    <div class="col-lg-2">
+                        <label for="vaIva" class="col-form-label">IVA %</label>
+                    </div>
+                    <div class="col-lg-9">
+                        <input type="tex" id="vaIva" name="vaIva" class="form-control" placeholder="Digite % IVA">
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="row ms-0 gy-2 align-items-center justify-content-center">
+                    <hr class="h-divider col-lg-10">
+                </div>
+            </div>
+            <div class="row">
+                <div class="row ms-0 align-items-center justify-content-center">
+                    <div class="col-lg-2">
+                        <label for="reVen" class="col-form-label">Venta $</label>
+                    </div>
+                    <div class="col-lg-9">
+                        <input type="tex" id="reVen" name="reVen" class="form-control" placeholder="Valor venta">
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="row ms-0 mb-3 gy-2 align-items-center justify-content-center">
+                    <div class="col-lg-2">
+                        <label for="reGan" class="col-form-label">Ganancia $</label>
+                    </div>
+                    <div class="col-lg-9">
+                        <input type="tex" id="reGan" name="reGan" class="form-control" placeholder="Valor Ganancia">
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="row justify-content-md-center">
+                    <div class="col">
+                        <div class="mb-3 d-grid col-4 mx-auto">
+                            <input type="button" class="btn btn-primary" name="" value="Calcular" onclick="calVenta()">
+                        </div>
                     </div>
                 </div>
             </div>
         </form>
     </div>
     <!-- footer -->
-    <div class="container fixed-bottom">
+    <div class="container">  <!-- fixed-bottom -->
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
             <div class="col-md-4 d-flex align-items-center">
                 <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
@@ -147,3 +166,46 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </body>
 </html>
+
+<!-- <div class="row justify-content-md-center pt-3">
+    <div class="col-xl-4">
+        <div class="mb-2">
+            <input type="text" class="form-control form-control-lg" id="calNum1" name="calNum1" placeholder="Ingrese número 1">
+        </div>
+    </div>
+    <div class="col-xl-4 mb-2 px-3 ps-xl-1 pe-xl-2">
+        <div class="row row-cols-6 row-cols-lg-6 g-2 g-lg-3 ">
+            <div class="col text-center fs-4 d-grid p-1">
+                <input type="Button" name="" value="+" onclick="sum()" class="btn btn-outline-success">
+            </div>
+            <div class="col text-center fs-4 d-grid p-1">
+                <input type="Button" name="" value="-" onclick="res()" class="btn btn-outline-success">
+            </div>
+            <div class="col text-center fs-4 d-grid p-1">
+                <input type="Button" name="" value="✱" onclick="mul()" class="btn btn-outline-success">
+            </div>
+            <div class="col text-center fs-4 d-grid p-1">
+                <input type="Button" name="" value="/" onclick="div()" class="btn btn-outline-success">
+            </div>
+            <div class="col text-center fs-4 d-grid p-1">
+                <input type="Button" name="" value="%" onclick="por()" class="btn btn-outline-success">
+            </div>
+            <div class="col text-center fs-4 d-grid p-1">
+                <input type="Button" name="" value="AC" onclick="reset()" class="btn btn-primary">
+            </div>
+        </div>
+    </div>
+    <div class="col-xl-4">
+        <div class="mb-2">
+            <input type="text" class="form-control form-control-lg" id="calNum2" name="calNum2" placeholder="Ingrese número 2">
+        </div>
+    </div>
+</div>
+<hr class="h-divider">
+<div class="row justify-content-md-center">
+    <div class="col">
+        <div class="mb-3">
+            <input type="text" class="form-control form-control-lg" id="calRes" name="calRes" placeholder="Resultado">
+        </div>
+    </div>
+</div> -->
